--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@tailwindcss/cli": "^4.1.3",
-    "@types/react": "^18.3.20",
+    "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
@@ -39,5 +39,8 @@
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
     "vite": "^6.2.0"
+  },
+  "overrides": {
+    "@types/react": "^19.0.0"
   }
 }
