--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "preinstall": "npm install --legacy-peer-deps",
+    "vercel-build": "npm install --legacy-peer-deps && npm run build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
